修改部分代码提示错误，修改开局结束队列名为WEB_CLOSE_GAME